# Epitech-Projects

101pong/: 101pong
101pong/bonus/: pong_game.py
BiggestSquare/: Makefile  bsq.c  main.c
BiggestSquare/include/: my.h  struct.h
Bistromatic/: Makefile
Bistromatic/include/: my.h
Bistromatic/src/: addinf.c  base.c  base2.c  error_gestion.c  eval_expr.c  main.c  my_bracket.c  operande.c  operation.c  prior.c  sub.c
Dante/: Makefile
Dante/generator/: Makefile
Dante/solver/: Makefile  map.txt
Defender/: Makefile  build.c  build2.c  build3.c  build4.c  build5.c  build6.c  button.c  button2.c  creation.c  creation2.c  creation3.c  creation4.c  creation5.c  creation6.c  creation7.c  enemy_path.c  enemy_path3.c  enemy_shot.c  enemy_shot2.c  enemy_shot3.c  enemy_shot4.c  enemy_shot5.c  enemy_shot6.c  enemy_shot7.c  game_func1.c  game_func2.c  game_func3.c  hit_zone.c  hit_zone2.c  hit_zone3.c  main.c  menu.c  menu2.c  my_defender.c  my_defender2.c  my_getnbrinverse.c  my_revstr.c  my_strlen.c  pause.c  (+7 more)
Defender/include/: my.h  struct.h
Evalexpr/: Makefile  eval_expr.c  main.c  operande.c  prior.c
Evalexpr/include/: my.h  struct.h
Hunter/: Makefile  button.c  creation.c  creation2.c  main.c  menu.c  miss_click.c  mouse.c  my_hunter.c  my_put_nbr.c  position.c  set_position.c  vie.c  window.c
Hunter/include/: my.h  struct.h
Infinadd/: Makefile  infin_add.c
Ls/: Makefile  main.c  my_ls.c
Ls/include/: my.h  struct.h
Matchstick/: Makefile  main.c  matchstick.c  matchstick2.c  remove_stick.c
Matchstick/include/: my.h  struct.h
Need4Stek/: Makefile  ai  direction.c  main.c
Need4Stek/include/: my.h
Printf/: Makefile  main.c
Printf/include/: my.h  struct.h
Rpg/: Makefile
Rpg/assets/: map.csv  name.txt  script  speech.txt
Rpg/src/: clock01.c  display.c  display02.c  event04.c  event1.c  event2.c  event3.c  fight01.c  free.c  go_to01.c  go_to02.c  go_to03.c  how_to_play01.c  init01.c  init02.c  init03.c  init04.c  init05.c  init06.c  interaction03.c  interaction04.c  interaction05.c  interaction06.c  interraction01.c  interraction02.c  inventaire.c  inventory01.c  main.c  mapping03.c  menu01.c  menu02.c  menu03.c  menu04.c  move.c  open_file.c  pause01.c  pause02.c  pause03.c  settings01.c  settings02.c
Runner/: Makefile  button.c  creation.c  creation2.c  jump.c  kill.c  main.c  menu.c  my_putchar.c  my_putstr.c  my_runner.c  obstacle.c  position.c  readmap.c  rectangle.c  score.c  setposition.c  setscale.c
Runner/include/: my.h  struct.h
Sokoban/: Makefile  box.c  condition_loose.c  condition_win.c  find_o.c  find_p.c  find_position_p.c  find_size_line.c  main.c  movement_player.c  movement_player2.c  save.c
Sokoban/include/: my.h  struct.h
area/: README.md  docker-compose.yml  start_docker.sh
area/database/: db_schema.sql  init.sql
area/mobile-client_flutter/: pubspec.yaml
area/web/: .env  Dockerfile  (+3 more)
indiestudio/: CMakeLists.txt  Makefile
indiestudio/assets/: angel.iqm  angelAnimation.iqm  demon.iqm  map0.txt  map1.txt  map2.txt  zombie.iqm  zombieAnimation.iqm
indiestudio/assets/skins/: character.iqm  characterAnimation.iqm  demonAnimation.iqm
indiestudio/cmake/: Findraylib.cmake
indiestudio/hpp/: Block3D.hpp  Bomb.hpp  Bonus.hpp  Button.hpp  Character.hpp  Deflagration.hpp  Engine.hpp  Entity.hpp  IScene.hpp  Image2D.hpp  MenuManager.hpp  Scene.hpp  SceneGame.hpp  SceneLevelSelect.hpp  SceneMenu.hpp  ScenePause.hpp  SceneSaveSelect.hpp  SceneSettings.hpp  SceneVersus.hpp  process.hpp  raylib.hpp
indiestudio/src/: Engine.cpp  MenuManager.cpp  SceneGame.cpp  SceneLevelSelect.cpp  SceneMenu.cpp  ScenePause.cpp  SceneSaveSelect.cpp  SceneSettings.cpp  SceneVersus.cpp  main.cpp  process.cpp  raylib.cpp
rtype/: CMakeLists.txt  README.md  README_setup_server.md  config.txt  install.sh
rtype/Client/hpp/: Client.hpp  Game.hpp  Particle_System.hpp  tcp_client.hpp
rtype/Client/src/: Client.cpp  Game.cpp  Particle_System.cpp  main.cpp  tcp_client.cpp
rtype/Exemples/1/: CMakeLists.txt  clean.sh  conanfile.txt
rtype/Exemples/1/src/: Enemy.cpp  Enemy.hpp  Enemy2.cpp  Enemy2.hpp  Enemy3.cpp  Enemy3.hpp  EnemyExplosion.cpp  EnemyExplosion.hpp  main.cpp  myEvent.cpp  myEvent.hpp  myEventBoss.cpp  myEventBoss.hpp
rtype/Exemples/2/: Makefile
rtype/Exemples/2/src/: Background.cpp  Background.hpp  Block.cpp  Block.hpp  Block2.cpp  Block2.hpp  Door.cpp  Door.hpp  Enemy.cpp  Enemy.hpp  Ladder.cpp  Ladder.hpp  Platform.cpp  Platform.hpp  main.cpp  myEvent.cpp  myEvent.hpp  myEventEnemy.cpp  myEventEnemy.hpp
rtype/Game_Engine/cpp/: Comp_Anim.cpp  Comp_Sound.cpp  Comp_TextSprite.cpp  EntityManager.cpp  EventShoot.cpp  System_Anim.cpp  System_Colision.cpp  System_Display.cpp  System_Event.cpp  System_Physics.cpp  System_Shoot.cpp
rtype/Game_Engine/hpp/: Comp_Anim.hpp  Comp_Colision.hpp  Comp_Event.hpp  Comp_Gravity.hpp  Comp_Hp.hpp  Comp_Move.hpp  Comp_Position.hpp  Comp_Scene.hpp  Comp_Shoot.hpp  Comp_Sound.hpp  Comp_TextSprite.hpp  Comp_Vector.hpp  Comp_Velocity.hpp  Component.hpp  EntityManager.hpp  EntityType.hpp  EventShoot.hpp  SoundManager.hpp  System.hpp  System_Anim.hpp  System_Colision.hpp  System_Display.hpp  System_Event.hpp  System_Physics.hpp  System_Shoot.hpp  TextureManager.hpp
rtype/Server/hpp/: Enemy.hpp  Enemy2.hpp  Enemy3.hpp  Enemy4.hpp  Server.hpp  myEvent.hpp  tcp_server.hpp
rtype/Server/src/: Enemy.cpp  Enemy2.cpp  Enemy3.cpp  Enemy4.cpp  EnemyExplosion.cpp  Server.cpp  loop.cpp  main.cpp  myEvent.cpp  myEventBoss.cpp  tcp_server.cpp
rtype/assets/: idPaths.txt
theplazza/: Kitchen.cpp  Makefile  cook_pizza.cpp  main.cpp  mutex.cpp  process.cpp  pthread.cpp  reception.cpp  time_gestion.cpp
(+149 files in other folders)
